# car-drive-ai-NEAT

./: .gitignore  .gitmodules  README.md  pyproject.toml
car_drive_ai_neat/: main.py  playback.py  playback_player.py  player.py  settings.py  simulator.py
tests/: vision.py
